--- a/HW5_Task1.csproj
+++ b/HW5_Task1.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Task1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
